[package]
name = "gl"
version = "0.1.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
json = "0.12.4"
regex = "1.4.3"
colored = "2.0.0"
chrono = "0.4.19"
