[package]
name = "pere"
version = "0.1.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colors-transform = "0.2.11"
serde = "1.0.125"
serde_yaml = "0.8.17"
walkdir = "2.3.2"
regex = "1.4.6"
