[package]
name = "pcall"
version = "0.1.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
base64 = "0.13.0"
lazy_static = "1.4.0"
